# Titan

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml
config/: prometheus.yml
config/grafana/dashboards/: titan.json
config/grafana/provisioning/dashboards/: default.yml
crates/titan-core/: Cargo.toml
crates/titan-core/benches/: matching.rs
crates/titan-core/src/: book.rs  engine.rs  fixed.rs  level.rs  lib.rs  order.rs  pool.rs
crates/titan-feed/: Cargo.toml
crates/titan-feed/src/: lib.rs  publisher.rs
crates/titan-metrics/: Cargo.toml
crates/titan-metrics/src/: lib.rs
crates/titan-net/: Cargo.toml
crates/titan-net/src/: gateway.rs  lib.rs
crates/titan-node/: Cargo.toml
crates/titan-node/src/: lib.rs  main.rs  metrics.rs  snapshot.rs
crates/titan-proto/: Cargo.toml
crates/titan-proto/src/: lib.rs  messages.rs  parser.rs
crates/titan-replay/: Cargo.toml
crates/titan-replay/src/: main.rs
crates/titan-ring/: Cargo.toml
crates/titan-ring/benches/: ring.rs
crates/titan-ring/src/: lib.rs
data/: sample_orders.csv
docs/: index.html
