[package]
name = "titan-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrayvec = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "matching"
harness = false
