[package]
name = "titan-replay"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "titan-replay"
path = "src/main.rs"

[dependencies]
titan-core = { workspace = true }
titan-proto = { workspace = true }
titan-metrics = { workspace = true }
quanta = { workspace = true }
hdrhistogram = { workspace = true }
csv = { workspace = true }
clap = { workspace = true }
serde = { version = "1", features = ["derive"] }
